--- a/frontend/src/components/Auth/Auth.css
+++ b/frontend/src/components/Auth/Auth.css
@@ -28,7 +28,7 @@
     margin: 20px 0;
 }
 
-.authWrapper > div {
+.authGoogleBtn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +38,7 @@
     cursor: pointer;
 }
 
-.authWrapper > div:hover{
+.authGoogleBtn:hover{
     background-color: rgba(137, 43, 226, 0.8);
     border-bottom: 2px solid #7580f1;
     border-right: 2px solid #7580f1;
