fix: auth design

--- a/frontend/src/css/auth.css
+++ b/frontend/src/css/auth.css
@@ -1,4 +1,5 @@
 .auth {
+    background: url("/public/assets/auth-bg.jpg");
     background-size: cover;
     font-family: sans-serif;
     height: 80vh;
