--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -1,12 +1,14 @@
 nav{
-    margin: 10px;
+    margin: 20px;
     border-radius: 30px;
     padding: 10px 40px;
-    border-bottom: 2px solid rgba(112, 128, 144, 0.388);
+    border-bottom: 2px solid rgba(148, 189, 229, 0.388);
+    border-left: 2px solid rgba(148, 189, 229, 0.388);
+    border-right: 2px solid rgba(148, 189, 229, 0.388);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: aliceblue;
+    background-color: white;
     font-family: sans-serif;
 }
 
@@ -29,4 +31,33 @@ nav ul li{
     cursor: pointer;
     list-style: none;
     margin: 0 10px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    padding: 8px;
+    border-radius: 30px;
+    /* font-weight: bold; */
+}
+
+nav ul li a:hover{
+    background-color: #1E90FF;
+    color: white;
+}
+
+nav div span a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    padding: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 30px;
+}
+
+nav div span a:hover{
+    background-color: blue;
+    color: white;
 }
