--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -47,6 +47,17 @@ nav ul li a:hover{
     color: white;
 }
 
+nav div span{
+    background-color: blue;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+nav div span:hover{
+    background-color: rgb(0, 0, 194);
+}
+
 nav div span a{
     text-decoration: none;
     color: black;
@@ -55,9 +66,5 @@ nav div span a{
     padding-left: 12px;
     padding-right: 12px;
     border-radius: 30px;
-}
-
-nav div span a:hover{
-    background-color: blue;
     color: white;
 }
