--- a/frontend/src/css/contact_form.css
+++ b/frontend/src/css/contact_form.css
@@ -1,30 +1,64 @@
 .contact-form {
-    background-color: #f2f2f2;
-    margin: 0 auto;
-    padding: 20px;
-    width: 70%;
-    border-radius: 5px;
+  background-color: #f2f2f2;
+  margin: 0 auto;
+  padding: 20px;
+  width: 70%;
+  max-width: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.field {
+  margin-bottom: 15px;
+}
+
+.field label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+  color: #333;
+}
+
+.field input,
+.field textarea {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  transition: border-color 0.3s ease;
+  outline: none;
+}
+
+.field input {
+  height: 40px;
+}
+
+.field input:focus,
+.field textarea:focus {
+  border-color: #007bff; 
 }
 
 .field textarea {
-    width: 100%;
-    height: 100px;
-    padding: 6px 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
-    outline: none;
+  height: 100px;
+  resize: none;
 }
 
-.green-btn{
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+.green-btn {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.green-btn:hover {
+  background-color: #45a049; 
 }
