--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -159,8 +159,6 @@
   width: 600px;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-evenly; */
-  /* align-items: center; */
   flex-wrap: wrap;
   padding: 20px;
   margin: 0 20px;
@@ -201,71 +199,68 @@
   color: rgb(34, 19, 19);
   border-bottom: 2px solid blue;
 }
-
+/* Feedback and testinomials */
 .feedback {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  margin: 0 20px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: center;
 }
 
 .feedback h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  color: #333;
 }
 
 .testimonial {
-  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  margin: 0 20px;
 }
 
 .testimonial > div {
   width: 300px;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  align-items: center;
-  padding: 10px;
-  margin: 0 20px;
-  border: 1px solid;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
   border-radius: 10px;
+  text-align: center;
+  transition: transform 0.3s ease;
+}
+
+.testimonial > div:hover {
+  transform: scale(1.05);
 }
 
 .testimonial > div > img {
   width: 140px;
   height: 140px;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 15px;
 }
 
 .quote > .name {
   font-size: 1.5rem;
   font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  margin-bottom: 15px;
-  margin-top: 15px;
+  margin-bottom: 10px;
+  color: #007bff;
 }
 
 .quote > p {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   margin-bottom: 15px;
-  margin-top: 15px;
+  color: #555;
 }
 
 .quote > .rating {
-  text-align: center;
-  margin-bottom: 15px;
-  margin-top: 15px;
+  font-size: 1.5rem;
+  color: #f2c94c;
 }
 
+/* "contact form  */
 .contact-wrap {
   width: 80%;
   display: flex;
@@ -318,7 +313,7 @@
 .contact-details .icon {
   margin-right: 15px;
   font-size: 1.5rem;
-  color: #007bff; 
+  color: #007bff;
 }
 
 .contact-details span {
@@ -426,15 +421,14 @@
   justify-content: left;
 }
 
-
-.faq-item li{
+.faq-item li {
   list-style-type: none;
   margin: 0;
   padding: 0;
   margin: 15px 0;
 }
 
-.faq-item li h3{
+.faq-item li h3 {
   font-size: 2rem;
   font-family: "Times New Roman", Times, serif;
   font-style: italic;
@@ -442,7 +436,7 @@
   margin-bottom: 15px;
 }
 
-.faq-item li p{
+.faq-item li p {
   margin-left: 30px;
   font-size: 1.3rem;
   font-family: "Times New Roman", Times, serif;
@@ -450,7 +444,7 @@
   margin-bottom: 15px;
 }
 
-.faq  a{
+.faq a {
   font-size: 1.3rem;
   font-family: "Times New Roman", Times, serif;
   margin: 10px 5px;
