--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -10,7 +10,8 @@ body {
 }
 .container {
   max-width: 1170px;
-  margin: 20px;
+  margin: 0 auto;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
