--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -69,3 +69,18 @@ nav div span a{
     border-radius: 30px;
     color: white;
 }
+
+.navProfile{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
+
+.navProfile img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
