--- a/frontend/src/css/contact_form.css
+++ b/frontend/src/css/contact_form.css
@@ -1,4 +1,4 @@
-.contact-form {
+/* .contact-form {
   background-color: #f2f2f2;
   margin: 0 auto;
   padding: 20px;
@@ -61,4 +61,4 @@
 
 .green-btn:hover {
   background-color: #45a049; 
-}
+} */
