--- a/frontend/src/css/search_form.css
+++ b/frontend/src/css/search_form.css
@@ -1,63 +1,47 @@
-.search-form{
+.search-form {
+    position: absolute;
     font-family: sans-serif;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
+}
+
+input,
+select {
+    position: relative;
+    top: 25px;
+    /* left: -50px; */
+    width: 160px;
+    margin-right: 15px;
+    color: rgb(129, 129, 129);
+    background: #000000;
+    padding: 10px 15px;
+    height: 50px;
+    font-size: 14px;
+    border-radius: 20px;
+    border: white;
+    box-shadow: inset 6px 6px 6px #202020, inset -6px -6px 6px rgb(0, 0, 0);
+}
+
+.form-row {
+    display: flex;
+    height: 100px;
+    padding: 0 25px;
+    backdrop-filter: blur(10px);
+    box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
+    background-color: rgba(134, 134, 134, 0.3);
     border-radius: 10px;
 }
 
-.field{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
 
-.field label{
-    font-size: 20px;
-}
-
-.field input{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 5px;
-    border: 1px solid slategray;
-    border-radius: 5px;
-}
-
-.field select{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 5px;
-    border: 1px solid slategray;
-    outline: none;
-    border-radius: 5px;
-}
-
-.field select option{
-    outline: none;
-    font-size: 18px;
-}
-
-.search-form button{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 5px;
-    border: 1px solid slategray;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 255, 0.648);
-    color: white;
+.search-form button {
+    margin: 25px 0;
+    padding: 5px 20px;
+    border: 2px solid rgba(80, 50, 0, 0.897);
+    border-radius: 20px;
+    background-color: rgba(255, 157, 0, 0.897);
+    color: rgb(98, 60, 0);
     font-size: 18px;
     cursor: pointer;
 }
 
-.search-form button:hover{
-    background-color: rgba(0, 0, 255, 0.8);
+.search-form button:hover {
+    background-color: rgba(216, 133, 0, 0.936);
 }
