--- a/frontend/src/css/contact_form.css
+++ b/frontend/src/css/contact_form.css
@@ -1,4 +1,4 @@
-/* .contact-form {
+.contact-form {
   background-color: #f2f2f2;
   margin: 0 auto;
   padding: 20px;
@@ -37,7 +37,7 @@
 
 .field input:focus,
 .field textarea:focus {
-  border-color: #007bff; 
+  border-color: #007bff;
 }
 
 .field textarea {
@@ -60,5 +60,5 @@
 }
 
 .green-btn:hover {
-  background-color: #45a049; 
-} */
+  background-color: #45a049;
+}
