--- a/frontend/src/css/search_form.css
+++ b/frontend/src/css/search_form.css
@@ -3,11 +3,10 @@
     font-family: sans-serif;
 }
 
-input,
-select {
+.search-form input,
+.search-form select {
     position: relative;
     top: 25px;
-    /* left: -50px; */
     width: 160px;
     margin-right: 15px;
     color: rgb(129, 129, 129);
@@ -20,7 +19,7 @@ select {
     box-shadow: inset 6px 6px 6px #202020, inset -6px -6px 6px rgb(0, 0, 0);
 }
 
-.form-row {
+.search-form .form-row {
     display: flex;
     height: 100px;
     padding: 0 25px;
