--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Foldit&family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Foldit&family=Lobster&family=Stylish&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
 .home {
@@ -10,6 +12,7 @@
   justify-content: center;
   align-items: center;
 }
+
 
 /* Top section  */
 .Top {
@@ -37,32 +40,38 @@
   color: #d9d9d9;
 }
 
+
+/* stats section */
+
 .stats {
-  width: 96%;
+  width: 100%;
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 252, 238);
-  padding: 20px;
+  background-image: url(/public/assets/stats.jpeg);
 }
 
-.stats>h2 {
-  margin-top: 10px;
-  font-size: 35px;
-  font-family: "Times New Roman", Times, serif;
-  margin-bottom: 20px;
-  color: gray;
+.stats .container {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 30px 5% 70px;
 }
 
-.stats>h3 {
-  font-size: 22px;
-  font-family: "Times New Roman", Times, serif;
-  margin-bottom: 20px;
-  color: gray;
+.stats .container h2 {
+  margin-top: 30px;
+  font-size: 50px;
+  font-family: 'Alegreya', serif;
+  font-weight: bold;
+  color: rgb(255 174 0);
 }
 
-.stats ul {
+.stats .container h3 {
+  font-size: 20px;
+  font-family: 'Jost', sans-serif;
+  color: rgb(255 213 23);
+}
+
+.stats .container ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -70,48 +79,40 @@
   flex-wrap: wrap;
 }
 
-.stats li {
+.stats .container li {
   list-style: none;
   margin: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
 }
 
-.stats li>div {
+.stats .container li div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-color: aliceblue;
-    border: 1px solid slateblue;
-    border-radius: 10px; */
-  padding: 10px;
-  width: 200px;
-  height: 200px;
+  padding: 20px;
+  width: 275px;
+  height: 120px;
 }
 
-.value {
-  font-size: 2rem;
-  font-family: "Times New Roman", Times, serif;
+.stats .container .text {
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  font-weight: bolder;
   margin-bottom: 10px;
-  color: blue;
+  color: rgb(255, 255, 255);
 }
 
-.desc {
-  font-size: 1.5rem;
-  font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  color: blueviolet;
+.stats .container .text span {
+  color: rgb(255 174 0);
 }
 
-.home>div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-.clients {
+/* network section */
+
+.network {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -121,7 +122,7 @@
   margin: 0 20px;
 }
 
-.clients>div {
+.network>div {
   width: 200px;
   height: 200px;
   display: flex;
@@ -133,7 +134,7 @@
   border-radius: 20px;
 }
 
-.clients>div>p {
+.network>div>p {
   font-size: 2rem;
   font-family: "Times New Roman", Times, serif;
   text-align: center;
