testimonial ui changes

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -216,13 +216,8 @@
 /* Feedback and testinomials */
 .feedback {
   width: 100%;
-  margin: 0 auto;
   padding: 40px 20px;
-  text-align: left;
-}
-
-.feedback .heading {
-  margin-left: 80px;
+  text-align: center;
 }
 
 .feedback .heading p {
