--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 92vh;
   background-color: #000;
   color: white;
 }
@@ -22,10 +22,6 @@
   height: 100%;
   background-color: #0f0f0f;
   color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .dashboardLeftUserDetails {
@@ -126,4 +122,37 @@
   background-color: #009900;
   border-radius: 20px;
   transition: 0.3s;
+}
+
+.dashboardRightTabs{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.dashboardRightTabs button{
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 0.3s;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.dashboardRightTabs button:hover{
+  background-color: #000;
+  color: #fff;
+  transition: 0.4s;
+}
+
+.dashboardRightTabs button.active{
+  background-color: #000;
+  color: #fff;
+  transition: 0.4s;
 }
