--- a/frontend/src/css/editProfile.css
+++ b/frontend/src/css/editProfile.css
@@ -1,11 +1,11 @@
 .editProfile{
-    height: 100%;
-    margin-top: 50px;
+    height: 80%;
+    width: 90%;
+    margin-top: 10px;
     margin-bottom: 50px;
     margin-left: 50px;
     margin-right: 50px;
     padding: 20px;
     border: 1px solid #e0e0e0;
     border-radius: 10px;
-    background-color: #f5f5f5;
 }
