--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -34,53 +34,38 @@
   margin-bottom: 20px;
 }
 
-.dashboardLeftUserDetails span {
-  font-size: 16px;
-  margin-left: 10px;
-  color: #ccc;
-  font-weight: bold;
-}
-
-.dashboardLeftUserDetailsImage {
+.dashboardLeftUserData {
   width: 100%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
 }
 
 .dashboardLeftUserDetailsImage img {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  border: 2px solid white;
 }
 
-.dashboardLeftUserDetailsFullname {
-  width: 100%;
-  font-size: 18px;
-  margin-top: 10px;
+.userNames{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 10px;
 }
 
-.dashboardLeftUserDetailsUsername {
-  width: 100%;
-  font-size: 18px;
-  margin-top: 10px;
+.fullname{
+  font-size: 22px;
+  font-weight: bold;
+  color: rgb(168 168 255);
 }
 
-.dashboardLeftUserDetailsEmail {
-  width: 100%;
+.username{
   font-size: 18px;
-  margin-top: 10px;
-}
-
-.dashboardLeftUserDetailsPhone {
-  width: 100%;
-  font-size: 18px;
-  margin-top: 10px;
-}
-
-.dashboardLeftUserDetailsAddress {
-  width: 100%;
-  font-size: 18px;
-  margin-top: 10px;
+  font-weight: bold;
+  opacity: 0.9;
 }
 
 .dashboardLeftUserProfileAction {
@@ -97,34 +82,115 @@
   border: none;
   outline: none;
   cursor: pointer;
-  color: #000;
+  color: #fff;
   font-size: 16px;
   font-weight: bold;
   transition: 0.3s;
   border-radius: 10px;
 }
 
-.dashboardLeftUserDeleteAccount {
-  background-color: red;
-}
-
 .dashboardLeftUserProfileAction button:hover {
-  color: #fff;
   border-radius: 20px;
   transition: 0.4s;
 }
 
 .dashboardLeftUserEditProfile {
-  background-color: #00ff00;
+  background-color: tomato;
 }
 
-.dashboardLeftUserEditProfile:hover {
-  background-color: #009900;
-  border-radius: 20px;
-  transition: 0.3s;
+.dashboardLeftOtherDetails{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.dashboardRightTabs{
+.dashboardLeftOtherDetailsItem{
+  width: 100%;
+  margin: 10px 0;
+  font-size: 20px;
+  color: #70e7d1;
+}
+
+.dashboardLeftOtherDetailsItem span{
+ margin: 10px;
+}
+
+.dashboardLeftUserOrderDetails{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.dashboardLeftUserOrderDetailsItem{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0;
+  font-size: 20px;
+  border: 1px solid grey;
+  padding: 10px;
+}
+
+.orderNumber{
+  font-size: 28px;
+  color: skyblue;
+}
+
+.orderText{
+  font-size: 16px;
+  color: #70e7d1;
+}
+
+.dashboardLogoutBtn{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  color: #000;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #fff;
+}
+
+.dashboardUserAccountDelete{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background: white;
+  color: #000;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.dashboardUserAccountDelete svg{
+  margin-right: 10px;
+}
+
+.dashboardUserAccountDelete:hover{
+  background-color: red;
+  color: white;
+  transition: 0.4s;
+}
+
+/* right tab styling */
+.dashboardRightTabs {
   width: fit-content;
   padding: 0 20px;
   display: flex;
@@ -135,7 +201,7 @@
   margin: 20px auto;
 }
 
-.dashboardRightTabs button{
+.dashboardRightTabs button {
   padding: 10px 20px;
   border: none;
   outline: none;
@@ -148,13 +214,13 @@
   margin: 10px;
 }
 
-.dashboardRightTabs button:hover{
+.dashboardRightTabs button:hover {
   background-color: #000;
   color: #fff;
   transition: 0.4s;
 }
 
-.dashboardRightTabs button.active{
+.dashboardRightTabs button.active {
   background-color: #000;
   color: #fff;
   transition: 0.4s;
