--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -53,6 +53,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   padding: 30px 5% 70px;
   width: 100%;
+  margin: 0;
 }
 
 .stats .container h2 {
@@ -67,6 +68,7 @@
   font-size: 20px;
   font-family: 'Jost', sans-serif;
   color: rgb(255 213 23);
+  margin-bottom: 50px;
 }
 
 .stats .container ul {
