--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -221,6 +221,7 @@
   width: 100%;
   padding: 40px 20px;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .feedback .heading p {
@@ -293,30 +294,64 @@
 }
 
 /* "contact form  */
+
 .contact-wrap {
-  width: 80%;
+  width: 100%;
+  /* height: 80%; */
+}
+
+.contact-wrap .tilt-line {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background-color: rgb(43, 43, 43);
+  transform: skewY(-3deg);
+  z-index: -1;
+}
+
+.contact-wrap .flex-container {
+  width: 100%;
+  height: 600px;
   display: flex;
-  flex-direction: column;
+  /* position: absolute; */
   justify-content: center;
+  background-color: rgb(43, 43, 43);
   align-items: center;
-  padding: 20px;
-  margin: 0 20px;
+  padding: 50px 100px;
+  margin: 40px 0;
 }
 
-.contact-wrap>h2 {
-  font-size: 2.8rem;
-  font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  margin-bottom: 15px;
-  color: blue;
-}
-
-.contact-wrap>p {
+.contact-wrap .flex-container .form {
   width: 50%;
-  font-size: 1.5rem;
+  margin-bottom: -100px;
+}
+
+.contact-wrap .flex-container .heading {
+  width: 50%;
+  padding: 0 80px 0 80px;
+  /* margin-right: 50px; */
+}
+
+.contact-wrap .flex-container .heading h3 {
+  color: rgb(198, 198, 198);
+  margin-bottom: 10px;
+}
+
+.contact-wrap .flex-container .heading h2 {
+  font-size: 32px;
+  font-family: "Merriweather", Sans-serif;
+  text-align: left;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+
+.contact-wrap .flex-container .heading p {
+  /* width: 50%; */
+  font-size: 16px;
   font-family: "Times New Roman", Times, serif;
-  text-align: center;
   margin-bottom: 15px;
+  color: #aeaeae;
+  padding-right: 10px;
 }
 
 /* get in touch */
