--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -120,6 +120,7 @@ ul {
   width: 40px;
   background-color: rgba(255, 255, 255, 0.2);
   margin: 0 10px 10px 0;
+  padding-top: 7px;
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
